# UGIF

./: .gitignore  README.md  debug_dii_dist.py  debug_heatmap.py  pyproject.toml  requirements.txt  setup.py  test_gee.py  test_gee_size.py  test_s1_dates.py  test_s1_size.py
configs/: default.yaml
scripts/: colab_setup.py  download_gee.py  download_sar.py  predict.py  predict_fused.py
src/data/: datamodule.py  fusion.py  levir_dataset.py  sar_downloader.py  transforms.py
src/explainability/: dii.py  report_generator.py  shap_explainer.py
src/frontend/: geojson_builder.py  llm_agent.py  query_parser.py
src/models/: fcn.py  losses.py  siamese.py
src/training/: callbacks.py  lightning_module.py  train.py
src/utils/: metrics.py  visualization.py
tests/: test_dataset.py  test_dii.py  test_model.py
