[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ugif"
version = "0.1.0"
description = "Unified Geospatial Intelligence Framework — Disaster Damage Assessment Pipeline"
authors = [{ name = "UGIF Team" }]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
